<resources>
    <string name="app_name">Messenger</string>
    <string name="messenger">Messenger</string>
    <string name="your_email">Your email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot password</string>
    <string name="registration">Registration</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">How old are you?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="reset_link_sent">The reset link has been successfully sent</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="type_your_message">Type your message:</string>
</resources>